; ModuleID = '/home/carl/AnghaBench/h2o/t/00unit/lib/common/extr_........libcommon....depsssl-conservatoryopensslopenssl_hostname_validation.c_memeq_ncase.c'
source_filename = "/home/carl/AnghaBench/h2o/t/00unit/lib/common/extr_........libcommon....depsssl-conservatoryopensslopenssl_hostname_validation.c_memeq_ncase.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i64)* @memeq_ncase to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @memeq_ncase(i8* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %8 = load i64, i64* %7, align 8
  %9 = icmp eq i64 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %3
  store i32 1, i32* %4, align 4
  br label %31

11:                                               ; preds = %3
  br label %12

12:                                               ; preds = %26, %11
  %13 = load i8*, i8** %5, align 8
  %14 = getelementptr inbounds i8, i8* %13, i32 1
  store i8* %14, i8** %5, align 8
  %15 = load i8, i8* %13, align 1
  %16 = sext i8 %15 to i32
  %17 = call i64 @lowercase(i32 %16)
  %18 = load i8*, i8** %6, align 8
  %19 = getelementptr inbounds i8, i8* %18, i32 1
  store i8* %19, i8** %6, align 8
  %20 = load i8, i8* %18, align 1
  %21 = sext i8 %20 to i32
  %22 = call i64 @lowercase(i32 %21)
  %23 = icmp ne i64 %17, %22
  br i1 %23, label %24, label %25

24:                                               ; preds = %12
  store i32 0, i32* %4, align 4
  br label %31

25:                                               ; preds = %12
  br label %26

26:                                               ; preds = %25
  %27 = load i64, i64* %7, align 8
  %28 = add i64 %27, -1
  store i64 %28, i64* %7, align 8
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %12, label %30

30:                                               ; preds = %26
  store i32 1, i32* %4, align 4
  br label %31

31:                                               ; preds = %30, %24, %10
  %32 = load i32, i32* %4, align 4
  ret i32 %32
}

declare dso_local i64 @lowercase(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
